# simage

./: .cvsignore  .hgsubstate  AUTHORS  BUGS.txt  CMakeLists.txt  COPYING  ChangeLog  ChangeLog.sh  FindFLAC.cmake  FindGdiPlus.cmake  FindOgg.cmake  FindOggVorbis.cmake  FindSndfile.cmake  FindVfw.cmake  FindVorbis.cmake  LICENSE  LICENSE.mpeg2enc  Makefile.am  Makefile.in  NEWS  README  README.WIN32  THANKS  TODO  acconfig.h  aclocal.m4  annotated.html  annotated_dup.js  appveyor.yml  autogen.sh  avi__encode_8c.html  avi__encode_8h.html  avi__encode_8h.js  avi__encode_8h_source.html  bitbucket-pipelines.yml  bootstrap  classes.html  config.h.cmake.in  config.h.in  configure  (+229 more)
.github/workflows/: codeql.yml  continuous-integration-workflow.yml  documentation-workflow.yml
cfg/: README  errors.txt  ltconfig  simage.m4
cmake/: CoinCMakeUtilities.cmake  FindFLAC.cmake  FindGdiPlus.cmake  FindOgg.cmake  FindOpus.cmake  FindVfw.cmake  FindVorbis.cmake  FindZstd.cmake  TestGdiPlus.cmake  TestGdiPlus.cxx  TestGdiPlusLockBits.cxx  TestVideoForWindows.cmake
cpack.d/: CMakeLists.txt  commons.cmake.in  debian.cmake.in  fedora.cmake.in
docs/: ChangeLog.v1.8.0  ChangeLog.v1.8.1  ChangeLog.v1.8.2  ChangeLog.v1.8.3  ChangeLog.v1.8.4  announcement-1_6_0.txt  announcement-1_6_1.txt  announcement-1_7_0.txt  simage.doxygen.awesome.cmake.in  simage.doxygen.cmake.in  simage.doxygen.in
examples/: audio2raw.c  img2avi.c  mpeg2enc.cpp  simage-convert.c  simage-read-line-test.c
giflib/: quantize.c  quantize.h
guile/: Makefile.am  Makefile.in  README  guilesimage.c  guilesimage.h  simage-convert.scm  simage.scm
html/: Makefile.am  Makefile.in
include/: avi_encode.h  simage.h  simage.h.in  simage_avi.h  simage_cgimage.h  simage_eps.h  simage_gdiplus.h  simage_gif.h  simage_jasper.h  simage_jpeg.h  simage_libsndfile.h  simage_oggvorbis.h  simage_pic.h  simage_png.h  simage_private.h  simage_qimage.h  simage_quicktime.h  simage_rgb.h  simage_tga.h  simage_tiff.h  simage_xwd.h
mpeg2enc/: Makefile.am  Makefile.in  README  api.c  api.h  conform.c  fdctref.c  global.h  idct.c  motion.c  mpeg2enc.h  predict.c  putbits.c  puthdr.c  putmpg.c  putpic.c  putseq.c  putseq.h  putvlc.c  quantize.c  ratectl.c  readpic.c  stats.c  transfrm.c  writepic.c
packaging/: description-summary.txt
packaging/debian/: changelog.in  control.in  copyright.in  rules.in
packaging/macosx/: Welcome.rtf
packaging/windows/: Makefile.in  heading.nsi.in  middle.nsi.in  post.nsi.in  simage-sdk.html.in
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_16.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  (+54 more)
src/: .cvsignore  Makefile.am  Makefile.in  avi_encode.c  movie.c  params.c  resize.c  simage.c  simage.cpp  simage12.c  simage13.c  simage_avi.c  simage_cgimage.c  simage_cgimage.cpp  simage_eps.c  simage_gdiplus.cpp  simage_gif.c  simage_jasper.c  simage_jpeg.c  simage_jpeg.cpp  simage_jpeg_reader.icc  simage_jpeg_writer.icc  simage_libsndfile.c  simage_oggvorbis_reader.c  simage_pic.c  simage_pic.cpp  simage_png.c  simage_png.cpp  simage_qimage.cpp  simage_quicktime.c  simage_rgb.c  simage_rgb.cpp  simage_tga.c  simage_tga.cpp  simage_tiff.c  simage_tiff.cpp  simage_write.c  simage_xwd.c  stream.c
tests/: img.rgb  img.tga  img.tif  loaders.c  loaders.cpp
